Fix min-width to fix width distortion in usage

--- a/style.css
+++ b/style.css
@@ -1,3 +1,6 @@
+html, body{
+    min-width: 300px;
+    width: 300px;
 body{
     display: flex;
     flex-direction: column;
